# garmin-cli

./: .gitignore  AGENTS.md  BUG.md  BUGS.md  Makefile  NOT_IMPLEMENTED.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: release.yml
scripts/: build.sh
skill/: SKILL.md
src/garmincli/: __init__.py  __main__.py  api.py  auth.py  cli.py  dates.py  errors.py  output.py
src/garmincli/commands/: activities.py  api.py  auth.py  body.py  devices.py  gear.py  goals.py  health.py  heart.py  hydration.py  menstrual.py  metrics.py  sleep.py  stress.py  vitals.py  workouts.py
tests/: test_dates.py  test_metrics_command.py  test_workout_steps.py  test_workout_update.py
