[project]
name = "garmin-cli"
version = "0.1.0"
description = "CLI to read health data from Garmin Connect"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "garminconnect>=0.2.38",
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    "readchar>=4.0.0",
]

[project.scripts]
gc = "garmincli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/garmincli"]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
